--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                             </div>
                         </div>
 
+                        <!-- image upload -->
                         <div class="form-group">
                             <label class="col-lg-3 control-label">Upload Image(s)</label>
                             <div id="wrapper" class="col-lg-5">
