--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             <div id="wrapper" class="col-lg-5">
                                 <input id="fileUpload" type="file" multiple />
                                   <br />
-                                  <div id="image-holder" name="imageHolder"></div>
+                                  <div id="image-holder"></div>
                             </div>
                         </div>
 
