--- a/result.html
+++ b/result.html
@@ -266,9 +266,9 @@
           <img id="img1" src="about:blank" alt="Image 1">
           <img id="img2" src="about:blank" alt="Image 2">
             <script type="text/javascript" language="JavaScript">
-              var img0 = window.sessionStorage.getItem("image0");
-              var img1 = window.sessionStorage.getItem("image1");
-              var img2 = window.sessionStorage.getItem("image2");
+              var img0 = window.localStorage.getItem("image0");
+              var img1 = window.localStorage.getItem("image1");
+              var img2 = window.localStorage.getItem("image2");
 
               var ih0 = document.getElementById("img0");
               var ih1 = document.getElementById("img1");
