testing google maps

--- a/result.html
+++ b/result.html
@@ -33,6 +33,12 @@
         section {
             display: block;
         }
+        /* Always set the map height explicitly to define the size of the div
+         * element that contains the map. */
+        #map {
+          height: 100%;
+        }
+
     </style>
 
 </head>
