testing google maps

--- a/result.html
+++ b/result.html
@@ -37,6 +37,7 @@
          * element that contains the map. */
         #map {
           height: 100%;
+          position: static;
         }
 
     </style>
