starting from preivous checkpoint & also removing the need to have educationa and gender inputted

--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
                     },
                     education: {
                         validators: {
-                            notEmpty: {
-                                message: 'The education is required and can\'t be empty'
-                            }
+                            // notEmpty: {
+                            //     message: 'The education is required and can\'t be empty'
+                            // }
                         }
                     },
                     category: {
@@ -453,9 +453,9 @@
                     },
                     gender: {
                         validators: {
-                            notEmpty: {
-                                message: 'The gender is required'
-                            }
+                            // notEmpty: {
+                            //     message: 'The gender is required'
+                            // }
                         }
                     },
                     'languages[]': {
