--- a/result.html
+++ b/result.html
@@ -33,6 +33,30 @@
         section {
             display: block;
         }
+        /* Always set the map height explicitly to define the size of the div
+         * element that contains the map. */
+        #map {
+          height: 100%;
+        }
+        /* Optional: Makes the sample page fill the window. */
+        html, body {
+          height: 100%;
+          margin: 0;
+          padding: 0;
+        }
+        #floating-panel {
+          position: absolute;
+          top: 10px;
+          left: 25%;
+          z-index: 5;
+          background-color: #fff;
+          padding: 5px;
+          border: 1px solid #999;
+          text-align: center;
+          font-family: 'Roboto','sans-serif';
+          line-height: 30px;
+          padding-left: 10px;
+        }
 
     </style>
 
@@ -255,8 +279,52 @@
             </label>
         </div>
 
-    </div>
+        <div class="row">
+            <label class="col-xs-3 control-label">Google Maps</label>
+            <label class="col-xs-4 control-label">
 
+              <div id="map" style="width:400px;height:400px;background:white"></div>
+            </label>
+        </div>
+
+    </div>
+    <!-- <div id="floating-panel">
+      <input id="address" type="textbox" value="Sydney, NSW">
+      <input id="submit" type="button" value="Geocode">
+    </div> -->
+
+    <script>
+      function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 15,
+          center: {lat: -34.397, lng: 150.644}
+        });
+        var geocoder = new google.maps.Geocoder();
+        //var address = '3654 Baldwin Hills Court South San Francisco';
+        var address = replacedStreet + replacedCity;
+        geocodeAddress(geocoder, map, address)
+        // document.getElementById('submit').addEventListener('click', function() {
+        //   geocodeAddress(geocoder, map);
+        // });
+      }
+
+      function geocodeAddress(geocoder, resultsMap, address) {
+        //var address = document.getElementById('address').value;
+        //address = '3654 Baldwin Hills Court South San Francisco';
+        geocoder.geocode({'address': address}, function(results, status) {
+          if (status === 'OK') {
+            resultsMap.setCenter(results[0].geometry.location);
+            var marker = new google.maps.Marker({
+              map: resultsMap,
+              position: results[0].geometry.location
+            });
+          } else {
+            alert('Geocode was not successful for the following reason: ' + status);
+          }
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5UB-333Aqb-x4CWxmqShkuy91KzSRxSM&callback=initMap" async defer></script>
 </body>
 
 </html>
